Added conclusions in the notebook end

--- a/HeroesOfPymoli/HeroesOfPymoli_starter.ipynb
+++ b/HeroesOfPymoli/HeroesOfPymoli_starter.ipynb
@@ -1587,7 +1587,17 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# CONCLUSIONS\n",
+    "# 1.Important trend to see here about customer demographic, 84% of customers are Male, and more that 50% of them are between\n",
+    "# 15 and 24 years old.\n",
+    "\n",
+    "# 2.The Age ranges that spend the most on average per person are (35-39) with $4.76 per person, followed by $4.54 and $4.32\n",
+    "# with <10 and (20-24) ranges respectively.\n",
+    "\n",
+    "# 3.We can concluse that the items: Final Critic, Oathbreaker, Last Hope of the Breaking Storm and Nirvana are the top 3\n",
+    "# most popular and with the greatest revenue for the business."
+   ]
   },
   {
    "cell_type": "code",
